<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
 	tools:context="cm.geolocalisation.tripcity.OthersFragment" >
 	
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:paddingTop="5dp"
    	android:paddingLeft="5dp"
		android:paddingRight="5dp"
		android:paddingBottom="5dp" >
        
        <LinearLayout
            android:id="@+id/ll_appartement"
            android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical">
	    	
            <TextView
		    	android:layout_marginBottom="10dp"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/show_Appartements" />
	        <ImageView
	            android:contentDescription="@string/show_Photo"
				android:src = "@drawable/hr_gray_main"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:drawSelectorOnTop="true"
				android:scaleType="fitStart" />
            
            <android.support.v7.widget.CardView
	            android:layout_width="match_parent"
		    	android:layout_height="200dp"
		    	card_view:cardCornerRadius="0dp"
		    	card_view:cardBackgroundColor="@color/myTextPrimaryColor"
		    	card_view:cardElevation="0dp" >
    		    
    		    <RelativeLayout
    		        android:layout_width="match_parent"
        			android:layout_height="match_parent" >
    		        
    		        <ImageView
				        android:id="@+id/extended_appartement_image"
				        android:contentDescription="@string/show_Photo"
				        android:src = "#d8d8d8"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:drawSelectorOnTop="true"
				        android:scaleType="centerCrop"
				        android:layout_centerInParent="true"
				        android:adjustViewBounds="true"
				        android:layout_alignParentTop="true" />
    		        
    		        <android.support.v7.widget.CardView
    		            android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	card_view:cardBackgroundColor="@android:color/transparent"
				    	card_view:cardElevation="0dp"
				    	android:layout_alignParentBottom="true"
				    	card_view:cardCornerRadius="0dp"
				    	android:id="@+id/cvActions" >
    		            
    		            <TextView
			                android:id="@+id/tv_prixAppartement"
					        android:padding="5dp"
					        android:gravity="center"
					       	android:layout_width="match_parent"
					       	android:layout_height="wrap_content" />
    		            
    		        </android.support.v7.widget.CardView>
    		        
    		    </RelativeLayout>
    		    
    		</android.support.v7.widget.CardView>
    		<android.support.v7.widget.CardView
    		    xmlns:android="http://schemas.android.com/apk/res/android"
		    	android:layout_width="match_parent"
		    	card_view:cardBackgroundColor="@color/myTextPrimaryColor"
		    	android:layout_height="wrap_content" >
    		    
    		    <RelativeLayout
		            android:layout_width="match_parent"
		        	android:layout_height="match_parent" >
    		        
    		        <TextView
			            android:id="@+id/showNbreChambres"
			            android:paddingLeft="5dp"
			            android:layout_marginBottom="10dp"
			        	android:layout_width="wrap_content"
			       	 	android:layout_height="wrap_content"
			       	 	android:text="@string/show_NbreChambres" />
    		        
    		        <ImageView
				        android:contentDescription="@string/show_Photo"
				        android:src = "@drawable/hr_gray_side"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:layout_below="@id/showNbreChambres"
				        android:layout_marginBottom="20dp"
				        android:drawSelectorOnTop="true"
				        android:scaleType="fitStart" />
    		        
    		        <TextView
			        	android:id="@+id/tv_nbreChambres"
			        	android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:layout_alignParentRight="true" />
    		        
    		        <TextView
			    	    android:id="@+id/tv_description"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="20dp"
				        android:paddingLeft="5dp"
						android:paddingRight="5dp"
						android:paddingBottom="5dp"
				        android:layout_below="@id/tv_nbreChambres" />
    		        
    		    </RelativeLayout>
    		    
    		</android.support.v7.widget.CardView>
        </LinearLayout>
       
        
        <LinearLayout
            android:id="@+id/ll_studio"
            android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical">
    		
            <TextView
		    	android:layout_marginBottom="10dp"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/show_Studios" />
	        <ImageView
	            android:contentDescription="@string/show_Photo"
				android:src = "@drawable/hr_gray_main"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:drawSelectorOnTop="true"
				android:scaleType="fitStart" />
	    	
            <android.support.v7.widget.CardView
	            android:layout_width="match_parent"
		    	android:layout_height="200dp"
		    	card_view:cardCornerRadius="0dp"
		    	card_view:cardBackgroundColor="@color/myTextPrimaryColor"
		    	card_view:cardElevation="0dp" >
    		    
    		    <RelativeLayout
    		        android:layout_width="match_parent"
        			android:layout_height="match_parent" >
    		        
    		        <ImageView
				        android:id="@+id/extended_studio_image"
				        android:contentDescription="@string/show_Photo"
				        android:src = "#d8d8d8"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:drawSelectorOnTop="true"
				        android:scaleType="centerCrop"
				        android:layout_centerInParent="true"
				        android:adjustViewBounds="true"
				        android:layout_alignParentTop="true" />
    		        
    		        <android.support.v7.widget.CardView
    		            android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	card_view:cardBackgroundColor="@android:color/transparent"
				    	card_view:cardElevation="0dp"
				    	android:layout_alignParentBottom="true"
				    	card_view:cardCornerRadius="0dp"
				    	android:id="@+id/cvActions2" >
    		            
    		            <TextView
			                android:id="@+id/tv_prixStudio"
					        android:padding="5dp"
					        android:gravity="center"
					       	android:layout_width="match_parent"
					       	android:layout_height="wrap_content" />
    		            
    		        </android.support.v7.widget.CardView>
    		        
    		    </RelativeLayout>
    		    
    		</android.support.v7.widget.CardView>
    		<android.support.v7.widget.CardView
    		    xmlns:android="http://schemas.android.com/apk/res/android"
		    	android:layout_width="match_parent"
		    	card_view:cardBackgroundColor="@color/myTextPrimaryColor"
		    	android:layout_height="wrap_content" >
    		    
    		    <RelativeLayout
		            android:layout_width="match_parent"
		        	android:layout_height="match_parent" >
    		        
    		        <TextView
			            android:id="@+id/showEquipe"
			            android:paddingLeft="5dp"
			            android:layout_marginBottom="10dp"
			        	android:layout_width="wrap_content"
			       	 	android:layout_height="wrap_content"
			       	 	android:text="@string/show_Equipe" />
    		        
    		        <ImageView
				        android:contentDescription="@string/show_Photo"
				        android:src = "@drawable/hr_gray_side"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:layout_below="@id/showEquipe"
				        android:layout_marginBottom="20dp"
				        android:drawSelectorOnTop="true"
				        android:scaleType="fitStart" />
    		        
    		        <TextView
			        	android:id="@+id/tv_equipe"
			        	android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:layout_alignParentRight="true" />
    		        
    		        <TextView
			    	    android:id="@+id/tv_descriptionStudio"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="20dp"
				        android:paddingLeft="5dp"
						android:paddingRight="5dp"
						android:paddingBottom="5dp"
				        android:layout_below="@id/tv_equipe" />
    		        
    		    </RelativeLayout>
    		    
    		</android.support.v7.widget.CardView>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/ll_chambre"
            android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical">
	    	
            <TextView
		    	android:layout_marginBottom="10dp"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/show_Chambres" />
	        <ImageView
	            android:contentDescription="@string/show_Photo"
				android:src = "@drawable/hr_gray_main"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:drawSelectorOnTop="true"
				android:scaleType="fitStart" />
            
            <android.support.v7.widget.CardView
	            android:layout_width="match_parent"
		    	android:layout_height="200dp"
		    	card_view:cardCornerRadius="0dp"
		    	card_view:cardBackgroundColor="@color/myTextPrimaryColor"
		    	card_view:cardElevation="0dp" >
    		    
    		    <RelativeLayout
    		        android:layout_width="match_parent"
        			android:layout_height="match_parent" >
    		        
    		        <ImageView
				        android:id="@+id/extended_chambre_image"
				        android:contentDescription="@string/show_Photo"
				        android:src = "#d8d8d8"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:drawSelectorOnTop="true"
				        android:scaleType="centerCrop"
				        android:layout_centerInParent="true"
				        android:adjustViewBounds="true"
				        android:layout_alignParentTop="true" />
    		        
    		        <android.support.v7.widget.CardView
    		            android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	card_view:cardBackgroundColor="@android:color/transparent"
				    	card_view:cardElevation="0dp"
				    	android:layout_alignParentBottom="true"
				    	card_view:cardCornerRadius="0dp"
				    	android:id="@+id/cvActionsChambre" >
    		            
    		            <TextView
			                android:id="@+id/tv_prixChambre"
					        android:padding="5dp"
					        android:gravity="center"
					       	android:layout_width="match_parent"
					       	android:layout_height="wrap_content" />
    		            
    		        </android.support.v7.widget.CardView>
    		        
    		    </RelativeLayout>
    		    
    		</android.support.v7.widget.CardView>
    		<android.support.v7.widget.CardView
    		    xmlns:android="http://schemas.android.com/apk/res/android"
		    	android:layout_width="match_parent"
		    	card_view:cardBackgroundColor="@color/myTextPrimaryColor"
		    	android:layout_height="wrap_content" >
    		    
    		    <RelativeLayout
		            android:layout_width="match_parent"
		        	android:layout_height="match_parent" >
    		        
    		        <TextView
			            android:id="@+id/showEquipeChambre"
			            android:paddingLeft="5dp"
			            android:layout_marginBottom="10dp"
			            android:text="@string/show_Equipe"
			        	android:layout_width="wrap_content"
			       	 	android:layout_height="wrap_content" />
    		        
    		        <ImageView
				        android:contentDescription="@string/show_Photo"
				        android:src = "@drawable/hr_gray_side"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:layout_below="@id/showEquipeChambre"
				        android:layout_marginBottom="20dp"
				        android:drawSelectorOnTop="true"
				        android:scaleType="fitStart" />
    		        
    		        <TextView
			        	android:id="@+id/tv_EquipeChambre"
			        	android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:layout_alignParentRight="true" />
    		        
    		        <TextView
			    	    android:id="@+id/tv_descriptionChambre"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_marginTop="20dp"
				        android:paddingLeft="5dp"
						android:paddingRight="5dp"
						android:paddingBottom="5dp"
				        android:layout_below="@id/tv_EquipeChambre" />
    		        
    		    </RelativeLayout>
    		    
    		</android.support.v7.widget.CardView>
        </LinearLayout>
        
    </LinearLayout>
    
</ScrollView>
